# PersonalApp

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: pytest.ini  run.py
src/environment_app/: __init__.py  db_connection_test.py  db_diagnostic_script.py
src/environment_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/environment_app/flask_app/: __init__.py  create_tables.py  forms.py  helpers.py  models.py  routes.py
src/environment_app/flask_app/templates/: dashboard.html  feedback.html  index.html  layout.html  navbar.html  prediction.html
src/environment_app/instance/: environment.db  test_environment.sqlite
src/environment_app/tests/: conftest.py  pytest.ini  test_forms.py  test_helpers.py  test_integration.py  test_models.py  test_routes.py  test_selenium.py  test_unit.py
src/instance/: test_environment.sqlite
