[project]
name = "environment_app"
version = "0.1.0"
description = "Personal Flask App for COMP0034 coursework"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
dependencies = [
    "flask",
    "flask-wtf",
    "flask-sqlalchemy",
    "pytest"
]
requires-python = ">=3.9"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["environment_app"]
package-dir = {"" = "src"}
